fixing copy button alignment

--- a/src/Assets/Styles/modal.less
+++ b/src/Assets/Styles/modal.less
@@ -71,6 +71,13 @@
     }
 }
 
+
+//share modal specfic styles
 .share-modal > .modal-wrapper {
     max-width: 600px;
+}
+
+#copy-button {
+    margin:auto;
+    white-space: nowrap;
 }
